test/e2e/chainsaw/aigateway/custom-policy/00-assert-custom-policy-programmed.yaml
# Assert the AIGatewayCustomPolicy is programmed in Konnect.
# Required bindings:
#  - namespace: Namespace of the AIGatewayCustomPolicy.
#  - aigw_custom_policy_name: Name of the AIGatewayCustomPolicy.
apiVersion: aiconfiguration.konghq.com/v1alpha1
kind: AIGatewayCustomPolicy
metadata:
  name: ($aigw_custom_policy_name)
  namespace: ($namespace)
status:
  (conditions[?type == 'Programmed']):
    - status: 'True'
  (id != null): true
  (gatewayID.id != null): true
